--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,9 +274,10 @@ jobs:
                 no_output_timeout: 240m
                 # TODO: remove the line with git checkout, it's WIP
                 command: |
+                  source ~/.bashrc
                   cd /mnt/ramdisk/wandb-testing/regression
                   git checkout update-py-v
-                  ./do-main-regression.sh --cli_branch $CIRCLE_BRANCH tests/main/
+                  ./do-main-regression.sh --cli_branch $CIRCLE_BRANCH tests/main/yolov5/
 #            - save-test-results
 #            # conditionally post a notification to slack if the job failed
 #            - when:
