run nightly against QA

--- a/tox.ini
+++ b/tox.ini
@@ -514,6 +514,7 @@ passenv =
     DATE
     USERNAME
     WANDB_API_KEY
+    WANDB_BASE_URL
 deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
