--- a/tox.ini
+++ b/tox.ini
@@ -422,7 +422,7 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    yea-wandb=='https://github.com/wandb/yea-wandb/archive/expose-aliases-ac-update-mock' #{env:YEA_WANDB_VERSION}
+    yea-wandb=='https://github.com/wandb/yea-wandb/archive/expose-aliases-ac-update-mock.zip' #{env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
