--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,4 @@ norecursedirs =
     build/
     tests/functional_tests
     tests/standalone_tests
-    tests/unit_tests
-    tests/unit_tests/tests_*
-    tests/unit_tests_old/tests_*
+    tests/pytest_tests/system_tests/
