--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,9 +238,6 @@ jobs:
       execute:
         type: boolean
         default: true
-      test_path:
-        type: string
-        default: ""
     docker:
       - image: "python:<<parameters.python_version_major>>.<<parameters.python_version_minor>>"
     parallelism: << parameters.parallelism >>
@@ -683,8 +680,8 @@ jobs:
           condition: << parameters.execute >>
           steps:
             - gcloud/install
-#                version: "413.0.0"
-#                components: "docker-credential-gcr"
+            #                version: "413.0.0"
+            #                components: "docker-credential-gcr"
             - setup_gcloud
             - setup_docker_buildx:
                 docker_layer_caching: false
@@ -1224,14 +1221,16 @@ workflows:
               python_version_minor: [6, 7, 8, 9, 10]
           name: "unit-s_base_mock_server-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
+      #
+      # Unit tests with pytest on Linux
+      #
       - tox-base:
           matrix:
             parameters:
               python_version_major: [3]
               python_version_minor: [6, 7, 8, 9, 10]
           name: "unit-s_base_lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          test_path: "tests/pytest_tests/unit_tests"
+          toxenv: "unit-py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
 
       #
       # Unit tests with pytest on Linux, using real wandb server -- for launch (unit_tests/tests_launch)
