--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1243,7 +1243,7 @@ workflows:
               python_version_major: [3]
               python_version_minor: [6, 7, 8, 9, 10]
           name: "unit-s_base_lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "unit-py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
+          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
           tox_args: "tests/pytest_tests/unit_tests"
       #
       # Unit tests with pytest on Linux, using real wandb server -- for launch (unit_tests/tests_launch)
