--- a/pytest.ini
+++ b/pytest.ini
@@ -18,3 +18,5 @@ norecursedirs =
     tests/functional_tests
     tests/standalone_tests
     tests/pytest_tests/system_tests/
+    tests/pytest_tests/unit_tests_old/
+
