--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1212,17 +1212,17 @@ workflows:
           name: "code-check"
           python_version_minor: 8
           toxenv: "protocheck3,protocheck4,generatecheck,codecovcheck,mypy,mypy-report,pyupgrade,black,isort-check,flake8,docstrings"
+
       #
-      # Unit tests with pytest on Linux, using real wandb server
+      # System tests with pytest on Linux, using real wandb server
       #
       - pytest:
           matrix:
             parameters:
               python_version_major: [3]
               python_version_minor: [6, 7, 8, 9, 10]
-          name: "system-s_base-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          name: "system-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-
       #
       # Unit tests with pytest on Linux, using the old mock server
       #
@@ -1231,7 +1231,7 @@ workflows:
             parameters:
               python_version_major: [3]
               python_version_minor: [6, 7, 8, 9, 10]
-          name: "unit-s_base_mock_server-lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          name: "unit-linux-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
           tox_args: "tests/pytest_tests/unit_tests_old"
       #
@@ -1242,20 +1242,48 @@ workflows:
             parameters:
               python_version_major: [3]
               python_version_minor: [6, 7, 8, 9, 10]
-          name: "unit-s_base_lin-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          name: "unit-linux-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
           toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
           tox_args: "tests/pytest_tests/unit_tests"
+
       #
-      # Unit tests with pytest on Linux, using real wandb server -- for launch (unit_tests/tests_launch)
+      # Unit tests with pytest on Windows and MacOS
       #
-      - pytest:
+      - win:
           matrix:
             parameters:
               python_version_major: [3]
-              python_version_minor: [8]
-          name: "unit-s_base-lin-pylaunch<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "pylaunch<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          test_path: "tests/pytest_tests/system_tests/tests_launch"
+              python_version_minor: [9]
+          name: "unit-win-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle"
+          tox_args: "tests/pytest_tests/unit_tests_old --timeout 300"
+
+      - win:
+          matrix:
+            parameters:
+              python_version_major: [3]
+              python_version_minor: [9]
+          name: "unit-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle"
+          tox_args: "tests/pytest_tests/unit_tests --timeout 300"
+
+      - mac:
+          matrix:
+            parameters:
+              python_version_major: [3]
+              python_version_minor: [9]
+          name: "unit-macos-mock_server-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
+          tox_args: "tests/pytest_tests/unit_tests_old"
+
+      - mac:
+          matrix:
+            parameters:
+              python_version_major: [3]
+              python_version_minor: [9]
+          name: "unit-macos-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
+          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
+          tox_args: "tests/pytest_tests/unit_tests"
 
       #
       # Functional tests with yea on Linux (base only)
@@ -1311,33 +1339,23 @@ workflows:
           tox_args: "tests/functional_tests"
           parallelism: 6
           xdist: 1
-      #
-      # Unit tests with pytest on Windows and MacOS, using real wandb server
-      #
-      - win:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-s_base-win-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,wincovercircle"
-          tox_args: "tests/pytest_tests/unit_tests_old --timeout 300"
-
-      - mac:
-          matrix:
-            parameters:
-              python_version_major: [3]
-              python_version_minor: [9]
-          name: "unit-s_base_mock_server-mac-py<<matrix.python_version_major>><<matrix.python_version_minor>>"
-          toxenv: "py<<matrix.python_version_major>><<matrix.python_version_minor>>,covercircle"
-          tox_args: "tests/pytest_tests/unit_tests_old"
 
       #
       # wandb launch tests
       #
       - launch:
-          name: "mach-launch"
+          name: "launch-mock-server"
           toxenv: "pylaunch,covercircle"
+
+      - pytest:
+          matrix:
+            parameters:
+              python_version_major: [3]
+              python_version_minor: [8]
+          name: "launch-relay-server"
+          toxenv: "pylaunch,covercircle"
+          test_path: "tests/pytest_tests/system_tests/tests_launch"
+
       #
       # sharded unit tests
       #
