--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist=
     mypy,
     flake8,
     docstrings,
-    py{36,37,38,39,launch,launch38},
+    py{36,37,38,39,launch},
     func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
             imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
@@ -41,19 +41,19 @@ deps =
     bokeh             # TODO: remove after conftest.py refactor
     nbclient          # TODO: remove after conftest.py refactor
 
-[testenv:py{36,37,38,39,310,launch,launch38}]
+[testenv:py{36,37,38,39,310,launch}]
 deps =
     {[unitbase]deps}
     -r{toxinidir}/requirements_dev.txt
 install_command =
-    py{36,37,38,39,launch,launch38}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
+    py{36,37,38,39,launch}: pip install --timeout 600 --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
 passenv =
     USERNAME
     CI_PYTEST_SPLIT_ARGS
     CI_PYTEST_PARALLEL
     CI
 setenv =
-    py{36,37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
+    py{36,37,38,39,310,launch}: COVERAGE_FILE={envdir}/.coverage
     py{37,39}: WINDIR=C:\\Windows
 # Pytorch installations on non-darwin need the `-f`
 whitelist_externals =
@@ -73,7 +73,7 @@ deps =
 whitelist_externals =
     mkdir
 setenv =
-    py{36,37,38,39,310,launch,launch38}: COVERAGE_FILE={envdir}/.coverage
+    py{36,37,38,39,310,launch}: COVERAGE_FILE={envdir}/.coverage
     py{37}: WINDIR=C:\\Windows
     s_nb: WB_UNIT_SHARD=s_nb
 passenv =
