--- a/tox.ini
+++ b/tox.ini
@@ -518,7 +518,7 @@ deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    yea-wandb=={env:YEA_WANDB_VERSION}
+    yea-wandb=='https://github.com/wandb/yea-wandb/archive/expose-aliases-ac-update-mock.zip' #{env:YEA_WANDB_VERSION}
 whitelist_externals =
     date
     echo
