--- a/tox.ini
+++ b/tox.ini
@@ -422,7 +422,7 @@ deps =
     -r{toxinidir}/requirements.txt
     func-s_{base,metaflow}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea-wandb/archive/expose-aliases-ac-update-mock.zip
+    yea-wandb=={env:YEA_WANDB_VERSION}
 extras =
     func-s_service-py{36,37,38,39,310}: service
     func-s_grpc-py{36,37,38,39,310}: grpc
@@ -518,7 +518,7 @@ deps =
     -r{toxinidir}/requirements.txt
     standalone-{cpu,gpu,tpu,local}-py{36,37,38,39,310}: -r{toxinidir}/requirements_dev.txt
     pytest-mock
-    https://github.com/wandb/yea-wandb/archive/expose-aliases-ac-update-mock.zip
+    yea-wandb=={env:YEA_WANDB_VERSION}
 whitelist_externals =
     date
     echo
