--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist=
     func-s_{base,sklearn,metaflow,tf115,tf21,tf24,tf25,tf26,ray112,ray2,service,docs,
             imports{1,2,3,4,5,6,7,8,9,10,11,12},noml,grpc}-py37,
     standalone-{cpu,gpu,tpu,local}-py38,
+    regression-py{37,38,39,310},
     func-cover,
     cover
 
@@ -531,3 +532,26 @@ commands =
     standalone-gpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-gpu run {posargs:--all}
     standalone-tpu-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=https://api.wandb.ai --shard standalone-tpu run {posargs:--all}
     standalone-local-py{36,37,38,39,310}: yea --debug --strict -p wandb:mockserver-bind=0.0.0.0 -p wandb:mockserver-host=__auto__ -p wandb:mockserver-relay=true -p wandb:mockserver-relay-remote-base-url=http://localhost:5000 --shard standalone-cpu run {posargs:--all}
+
+[testenv:regression-py{37,38,39,310}]
+install_command = pip install --extra-index-url https://download.pytorch.org/whl/cpu {opts} {packages}
+commands_pre =
+setenv =
+    {[base]setenv}
+    COVERAGE_FILE={envdir}/.coverage
+    WANDB_PROJECT=standalone-{env:DATE}
+passenv =
+    DATE
+    USERNAME
+    WANDB_API_KEY
+whitelist_externals =
+    date
+    echo
+    export
+    mkdir
+    sh
+    curl
+    source
+commands =
+    mkdir -p test-results
+    wandb login --relogin {env:WANDB_API_KEY}
